Fix warning image overflow in space hierarchy (#7686)

--- a/res/css/structures/_SpaceHierarchy.scss
+++ b/res/css/structures/_SpaceHierarchy.scss
@@ -84,6 +84,8 @@ limitations under the License.
             width: 16px;
             left: 0;
             background-image: url("$(res)/img/element-icons/warning-badge.svg");
+            background-size: cover;
+            background-repeat: no-repeat;
         }
     }
 
